styles/default.css
* {
  margin: 0;
  padding: 0;
  font-family: "Open Sans", sans-serif;
}

body {
  background-color: #2C3E50;
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  box-sizing: border-box;
}

@media only screen and (min-width: 720px) {
  body {
    width: 60vw;
  }
}

header {
  background-color: #2980B9;
  color: #ECF0F1;
  padding: 2em 2em 0.5em 3em;
}

@media only screen and (max-width: 480px) {
  header h1 {
    font-weight: 300;
	font-size: 150%;
  }

  header {
    padding: 1em 1em 0.5em 2em;
  }
}

section {
  height: 90%;
  background-color: #ECF0F1;
  margin: 0 auto;
  width: 100%;
}

.msg-box {
  flex-grow: 1;
  overflow: auto;
  padding: 1em, 2em;
}

#msg-form {
  display: flex; 
  width: 100%;
}

#msg-form * {
  height: 2em;
  box-sizing: border-box;
  border-width: 0;
  
  font-size: 150%;
  vertical-align: top;
}

.msg-input {
  flex: 1 2 70%;
  padding-left: 1em;

}

input:focus {
	outline: 0;
}

.msg-btn {
  padding: 0 1em;
  background-color: white;
  color: #3498DB;
}

.msg-btn:hover {
  color: #2980B9;
}

.message {
  background-color: white;
  border-radius: 0.5em;
  width: 80%;
  margin: 1em auto;
  padding: 0.5em 1em;
}

.message .author, .message .timestamp {
  display: inline-block;
  color: #3498DB;
  padding-bottom: 1em;
  word-wrap: break-word;
}

.message .timestamp {
  float: right;
  font-weight: 700;
  font-size: 80%;
}


.message .content {
  font-size: 120%;
  font-weight: 300;
  word-break: break-all;
}

#form-login {
	margin: 0 auto;
	margin-top: 10em;
	width: 90%;
}

@media only screen and (min-width: 500px) {
	#form-login {
		width: 70%;
	}
}

@media only screen and (min-width: 1000px) {
	#form-login {
		width: 50%;
	}
}

#form-login * {
	display: block;
	margin: 0.5em auto;
	font-size: 150%;
	height: 1.5em;
	width: 100%;
}

#form-login label {
	text-align: center;
	font-size: 250%;
	font-weight: 300;
	color: #ECF0F1;
}

@media only screen and (max-width: 480px) {
	#form-login label {
		font-size: 200%;
	}
}

#form-login input[type="text"] {
	border: none;
	text-align: center;
	background-color: #ECF0F1;
}

#form-login input[type="submit"] {
	border: none;
	text-align: center;
	background-color: #2980B9;
	color: #ECF0F1;
	margin-top: 1em;
}

#form-login input[type="submit"]:hover {
	background-color: #3498DB;
}

